Updates on html and bootstrap css

--- a/index.html
+++ b/index.html
@@ -8,175 +8,131 @@
         <title>Project - Google Homepage</title>
     </head>
     <body>
-        <div>
-            <div>
-                <a href="#About">About</a>
-                <a href="#Store">Store</a>
-                <div>
-                    <div>
-                        <div>
-                            <div class="1">
-                                <div>
-                                    <ahref="#Gmail">Gmail</a>
-                                </div>
-                                <div>
-                                    <ahref="#Images">Images</a>
-                                </div>
+        <div class="container-fluid">
+            <div class="container-fluid">
+                <nav class="navbar navbar-expand-lg sticky-top">
+                    <a class="nav-link active" href="#About">About</a>
+                    <a class="nav-link active" href="#Store">Store</a>
+                    <div class="container-fluid">
+                        <div class="container-fluid">
+                            <div class="container-fluid">
+                                <a class="nav-link active" href="#Gmail">Gmail</a>
                             </div>
-                            <div class="2">
-                                <div>
-                                    <div>
-                                        <div>
-                                            <a href="#Apps-dropdown" role="button">
-                                                <img src="img/1x/apps-icon-sm.png">
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div>
-                                    <div>
-                                        <a href="#Account" role="button">
-                                            <img src="img/1x/act-icon-sm.png">
+                            <div class="container-fluid">
+                                <a class="nav-link active" href="#Images">Images</a>
+                            </div>
+                        </div>
+                        <div class="container-fluid">
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" href="#" src="img/1x/apps-icon-sm.png">
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li>
+                                        <a class="dropdown-item" href="#">Account</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Gmail">
+                                            <img class="dropdown-item" src="img/2x/gmail-icon-lg.png">
+                                            <span class="dropdown-item">Gmail</span>
                                         </a>
-                                    </div>
-                                </div>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Drive">
+                                            <img class="dropdown-item" src="img/2x/gdrive-icon-lg.png">
+                                            <span class="dropdown-item">Drive</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Search">
+                                            <img class="dropdown-item" src="img/2x/search-icon-lg.png">
+                                            <span class="dropdown-item">Search</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#YouTube">
+                                            <img src="img/2x/youtube-icon-lg.png">
+                                            <span>YouTube</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#PlayStore">
+                                            <img src="img/2x/store-icon-lg.png">
+                                            <span>Play</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Maps">
+                                            <img src="img/2x/maps-icon-lg.png">
+                                            <span>Maps</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Calendar">
+                                            <img src="img/2x/cal-icon-lg.png">
+                                            <span>Calendar</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Translate">
+                                            <img src="img/2x/trans-icon-lg.png">
+                                            <span>Translate</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Photos">
+                                            <img src="img/2x/photos-icon-lg.png">
+                                            <span>Photos</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#News">
+                                            <img src="img/2x/news-icon-lg.png">
+                                            <span>News</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Meet">
+                                            <img src="img/2x/hangouts-icon-lg.png">
+                                            <span>Meet</span>
+                                        </a>
+                                    </li>
+                                    <li><a class="dropdown-item" href="#More-from-google">More from Google</a></li>
+                                </ul>
                             </div>
-                            <div class="3">
-                                <div>
-                                    <div>
-                                        <img src="img/2x/act-icon-lg.png">
-                                    </div>
-                                    <div>
-                                        <div>Account</div>
-                                        <div>email@email.com</div>
-                                        <a href="#Account">Manage your Google Account</a>
-                                    </div>
-                                </div>
-                                <div>
-                                    <a href="Account">
-                                        <div>
+                            <div class="dropdown">
+                                <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
+                                    <img class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" href="#" src="img/1x/act-icon-sm.png">
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                    <li>
+                                        <a class="dropdown-item" href="#"><img src="img/2x/act-icon-lg.png"></a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#">Account</a>
+                                        <a class="dropdown-item" href="#">email@email.com</da>
+                                        <a class="dropdown-item" href="#Account">Manage your Google Account</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="Account">
                                             <img src="img/1x/act-icon-sm.png">
                                             <span>Add another account</span>
-                                        </div>
-                                    </a>
-                                </div>
-                                <div>
-                                    <a href="#Sign-out">Sign out of all accounts</a>
-                                </div>
-                                <div>
-                                    <a href="#Privacy-Policy">Privacy Policy</a>
-                                    <a>•</a>
-                                    <a href="Terms-of-Service">Terms of Service</a>
-                                </div>
-                            </div>
-                            <div class="4">
-                                <div>
-                                    <ul>
-                                        <li>
-                                            <a href="#Account">
-                                                <div>
-                                                    <img src="img/2x/act-icon-lg.png">
-                                                    <span>Account</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Gmail">
-                                                <div>
-                                                    <img src="img/2x/gmail-icon-lg.png">
-                                                    <span>Gmail</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Drive">
-                                                <div>
-                                                    <img src="img/2x/gdrive-icon-lg.png">
-                                                    <span>Drive</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Search">
-                                                <div>
-                                                    <img src="img/2x/search-icon-lg.png">
-                                                    <span>Search</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#YouTube">
-                                                <div>
-                                                    <img src="img/2x/youtube-icon-lg.png">
-                                                    <span>YouTube</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#PlayStore">
-                                                <div>
-                                                    <img src="img/2x/store-icon-lg.png">
-                                                    <span>Play</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Maps">
-                                                <div>
-                                                    <img src="img/2x/maps-icon-lg.png">
-                                                    <span>Maps</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Calendar">
-                                                <div>
-                                                    <img src="img/2x/cal-icon-lg.png">
-                                                    <span>Calendar</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Translate">
-                                                <div>
-                                                    <img src="img/2x/trans-icon-lg.png">
-                                                    <span>Translate</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Photos">
-                                                <div>
-                                                    <img src="img/2x/photos-icon-lg.png">
-                                                    <span>Photos</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#News">
-                                                <div>
-                                                    <img src="img/2x/news-icon-lg.png">
-                                                    <span>News</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="#Meet">
-                                                <div>
-                                                    <img src="img/2x/hangouts-icon-lg.png">
-                                                    <span>Meet</span>
-                                                </div>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                    <div>
-                                        <a href="#More-from-google">More from Google</a>
-                                    </div>
-                                </div>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="#Privacy-Policy">Privacy Policy</a>
+                                    </li>
+                                    <li>
+                                        <a>•</a>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item" href="Terms-of-Service">Terms of Service</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
-                </div>
+                </nav>
             </div>
             <div>
                 <div>
@@ -212,7 +168,7 @@
                     </div>
                 </form>
             </div>
-            <div></div>
+            <div>Empty</div>
             <div>
                 <div>
                     <a role="button" href="#Advertising">Advertising</a>
