--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Project - Google Homepage</title>
     </head>
     <body>
-        <div class="d-flex flex-column">
+        <div class="d-flex flex-column h-100">
             <div class="container-fluid">
                 <nav class="navbar navbar-expand-lg row bg-transparent">
                     <div class="container-fluid justify-content-start col">
@@ -153,24 +153,24 @@
                     </div>
                 </form>
             </div>
-            <div class="d-flex flex-xl-grow-1 flex-xl-shrink-0 mt-auto">Empty</div>
-            <footer class="bottom-bar container-fluid">
-                <div class="row text-center">
-                    <div class="col order-1 p-2">
-                        <a class="bottom-bar" role="button" href="#Advertising">Advertising</a>
-                        <a class="bottom-bar" role="button" href="#Business">Business</a>
-                        <a class="bottom-bar" role="button" href="#How-Search-works">How Search works</a>
+            <div class="d-flex flex-grow-1 flex-shrink-0 mt-auto empty"></div>
+            <footer class="container-fluid footer">
+                <div class="row bottom-bar p-1">
+                    <div class="container-fluid ash align-self-center col-lg-4 order-1 text-start">
+                        <a class="p-2 bottom-bar" role="button" href="#Advertising">Advertising</a>
+                        <a class="p-2 bottom-bar" role="button" href="#Business">Business</a>
+                        <a class="p-2 bottom-bar" role="button" href="#How-Search-works">How Search works</a>
                     </div>
-                    <div class="carbon-neutral col order-2 p-2">
-                        <a class="bottom-bar" href="#Carbon-neutral">
+                    <div class="container-fluid carbon-neutral align-self-center col-lg-4 order-2 text-center">
+                        <a class="p-2 bottom-bar" href="#Carbon-neutral">
                             <img class="leaf-size" src="img/leaf.png">
                             <span class="bottom-bar">Carbon neutral since 2007</span>
                         </a>
                     </div>
-                    <div class="col order-3 p-2">
-                        <a class="bottom-bar" role="button" href="#Privacy">Privacy</a>
-                        <a class="bottom-bar" role="button" href="Terms">Terms</a>
-                        <div class="btn-group dropup">
+                    <div class="container-fluid pts col-lg-4 align-self-center order-3 text-end">
+                        <a class="p-2 bottom-bar" role="button" href="#Privacy">Privacy</a>
+                        <a class="p-2 bottom-bar" role="button" href="Terms">Terms</a>
+                        <div class="btn-group dropup p-2">
                             <a type="button" class="dropdown-toggle caret-off bottom-bar" data-bs-toggle="dropdown">Settings</a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>
