--- a/index.html
+++ b/index.html
@@ -18,116 +18,127 @@
                     <div class="container-fluid justify-content-end col">
                         <a class="nav-link active font-black font-13" href="#Gmail">Gmail</a>
                         <a class="nav-link active font-black font-13" href="#Images">Images</a>
-                        <div class="dropdown">
+                        <div class="dropdown dropstart">
                             <a class="dropdown-toggle caret-off" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                                 <img class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" href="#" src="img/1x/apps-icon-sm.png">
                             </a>
-                            <ul class="dropdown-menu caret-off" aria-labelledby="dropdownMenuButton1">
-                                <li class="container-fluid col">
-                                    <a class="dropdown-item" href="#">
-                                        <img class="aa-dropdown-img" src="img/2x/act-icon-lg.png">
-                                        <span class="font-black">Account</span>
-                                    </a>
-                                </li>
-                                <li class="container-fluid col">
-                                    <a class="dropdown-item" href="#Gmail">
-                                        <img class="aa-dropdown-img" src="img/2x/gmail-icon-lg.png">
-                                        <span class="font-black">Gmail</span>
-                                    </a>
-                                </li>
-                                <li class="container-fluid col">
-                                    <a class="dropdown-item" href="#Drive">
-                                        <img class="aa-dropdown-img" src="img/2x/gdrive-icon-lg.png">
-                                        <span class="font-black">Drive</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#Search">
-                                        <img class="aa-dropdown-img" src="img/2x/search-icon-lg.png">
-                                        <span class="font-black">Search</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#YouTube">
-                                        <img class="aa-dropdown-img" src="img/2x/youtube-icon-lg.png">
-                                        <span class="font-black">YouTube</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#PlayStore">
-                                        <img class="aa-dropdown-img" src="img/2x/store-icon-lg.png">
-                                        <span class="font-black">Play</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#Maps">
-                                        <img class="aa-dropdown-img" src="img/2x/maps-icon-lg.png">
-                                        <span class="font-black">Maps</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#Calendar">
-                                        <img class="aa-dropdown-img" src="img/2x/cal-icon-lg.png">
-                                        <span class="font-black">Calendar</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#Translate">
-                                        <img class="aa-dropdown-img" src="img/2x/trans-icon-lg.png">
-                                        <span class="font-black">Translate</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#Photos">
-                                        <img class="aa-dropdown-img" src="img/2x/photos-icon-lg.png">
-                                        <span class="font-black">Photos</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#News">
-                                        <img class="aa-dropdown-img" src="img/2x/news-icon-lg.png">
-                                        <span class="font-black">News</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#Meet">
-                                        <img class="aa-dropdown-img" src="img/2x/hangouts-icon-lg.png">
-                                        <span class="font-black">Meet</span>
-                                    </a>
-                                </li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item font-black" href="#More-from-google">More from Google</a></li>
+                            <ul class="dropdown-menu dropdown-menu-nav" aria-labelledby="dropdownMenuButton1">
+                                <div class="row row-cols-1 row-cols-sm-3 g-2">
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/act-icon-lg.png"></a>
+                                            <span class="font-black">Account</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/gmail-icon-lg.png"></a>
+                                            <span class="font-black">Gmail</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/gdrive-icon-lg.png"></a>
+                                            <span class="font-black">Drive</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/search-icon-lg.png"></a>
+                                            <span class="font-black">Search</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/youtube-icon-lg.png"></a>
+                                            <span class="font-black">YouTube</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/store-icon-lg.png"></a>
+                                            <span class="font-black">Play</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/maps-icon-lg.png"></a>
+                                            <span class="font-black">Maps</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/cal-icon-lg.png"></a>
+                                            <span class="font-black">Calendar</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/trans-icon-lg.png"></a>
+                                            <span class="font-black">Translate</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/photos-icon-lg.png"></a>
+                                            <span class="font-black">Photos</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/news-icon-lg.png"></a>
+                                            <span class="font-black">News</span>
+                                        </div>
+                                    </li>
+                                    <li class="col">
+                                        <div class="card dropdown-item text-center border-0 btn" href="#">
+                                            <a><img class="aa-dropdown-img" src="img/2x/hangouts-icon-lg.png"></a>
+                                            <span class="font-black">Meet</span>
+                                        </div>
+                                    </li>
+                                    <li class="col w-100"><hr class="dropdown-divider"></li>
+                                    <li class="col w-100">
+                                        <div class="card text-center border-0 pe-5 ps-5">
+                                            <div class="dropdown-item border rounded text-decoration-none btn" href="#"><a>More from Google</a></div>
+                                        </div>
+                                    </li>
+                                </div>
                             </ul>
                         </div>
-                        <div class="dropdown">
+                        <div class="dropdown dropstart">
                             <a class="dropdown-toggle caret-off" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">
                                 <img class="nav-link dropdown-toggle" type="button" id="dropdownMenuButton1" href="#" src="img/1x/act-icon-sm.png">
                             </a>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li>
-                                    <a class="dropdown-item aa-dropdown-img" href="#"><img src="img/2x/act-icon-lg.png"></a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item font-black" href="#">Account</a>
-                                    <a class="dropdown-item font-black" href="#">email@email.com</da>
-                                    <a class="dropdown-item font-black" href="#Account">Manage your Google Account</a>
-                                </li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li>
-                                    <a class="dropdown-item" href="Account">
-                                        <img class="aa-dropdown-img" src="img/1x/act-icon-sm.png">
-                                        <span  class="font-black">Add another account</span>
-                                    </a>
-                                <li><hr class="dropdown-divider"></li>
-                                <li>
-                                    <a class="dropdown-item font-black" href="#">Sign out of all accounts</a>
-                                </li>
-                                <li><hr class="dropdown-divider"></li>
-                                <li>
-                                    <a class="dropdown-item font-black" href="#Privacy-Policy">Privacy Policy</a>
-                                    <a>•</a>
-                                    <a class="dropdown-item font-black" href="Terms-of-Service">Terms of Service</a>
-                                </li>
+                            <ul class="dropdown-menu dropdown-menu-nav" aria-labelledby="dropdownMenuButton1">
+                                <div class="text-center">
+                                    <li>
+                                        <div class="container-fluid">
+                                            <a><img src="img/2x/act-icon-lg.png" style="height: 80px; width: auto;"></a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div><span class="font-black" style="font-size: 16px; letter-spacing: 0.29px; line-height: 22px;">Account</span></div>
+                                        <div><span class="font-black" style="color: #5f6368; font-size: 14px; line-height: 19px;">email@gmail.com</span></div>
+                                        <div class="container mt-1 mb-4">
+                                            <a class="dropdown-item font-black border rounded-pill" href="#" style="border-color: #dadce0; color: #3c4043; font-size: 14px; line-height: 16px; margin: 16px 0 0; padding: 8px 16px;">Manage your Google Account</a>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <a class="dropdown-item text-start" href="#" style="padding: 14px 41px; border-top: 1px solid #e8eaed; font-size: 14px; line-height: 16px; color: #3c4043">
+                                            <img src="img/2x/act-icon-lg.png" style="height: 20px; width: auto;">
+                                            Add another account
+                                        </a>
+                                    <li class="pt-1 pb-1" style="border-top: 1px solid #e8eaed; border-bottom: 1px solid #e8eaed;">
+                                        <a class="font-black text-decoration-none btn" href="#" style="margin: 16px; padding: 10px 24px; font-size: 14px; line-height: 16px; border: 1px solid #dadce0; border-radius: 4px;">Sign out of all accounts</a>
+                                    </li>
+                                    <li>
+                                        <div class="align-self-center text-nowrap" style="margin: 14px 33px; color: #5f6368; font-size: 12px;">
+                                            <a class="text-decoration-none" style="color: #5f6368; padding: 4px 8px; line-height: 16px;" href="#">Privacy Policy</a>
+                                            <span class="align-self-center"  style="color: #5f6368;">•</span>
+                                            <a class="text-decoration-none" style="color: #5f6368; padding: 4px 8px; line-height: 16px;" href="">Terms of Service</a>
+                                        </div>
+                                    </li>
+                                </div>
                             </ul>
                         </div>
                     </div>
@@ -157,21 +168,21 @@
             <footer class="container-fluid footer">
                 <div class="row bottom-bar p-1">
                     <div class="container-fluid ash align-self-center col-lg-4 order-1 text-start">
-                        <a class="p-2 bottom-bar" role="button" href="#Advertising">Advertising</a>
-                        <a class="p-2 bottom-bar" role="button" href="#Business">Business</a>
-                        <a class="p-2 bottom-bar" role="button" href="#How-Search-works">How Search works</a>
+                        <a class="p-2 bottom-text" role="button" href="#Advertising">Advertising</a>
+                        <a class="p-2 bottom-text" role="button" href="#Business">Business</a>
+                        <a class="p-2 bottom-text" role="button" href="#How-Search-works">How Search works</a>
                     </div>
                     <div class="container-fluid carbon-neutral align-self-center col-lg-4 order-2 text-center">
-                        <a class="p-2 bottom-bar" href="#Carbon-neutral">
+                        <a class="p-2 bottom-text" href="#Carbon-neutral">
                             <img class="leaf-size" src="img/leaf.png">
-                            <span class="bottom-bar">Carbon neutral since 2007</span>
+                            <span class="bottom-text">Carbon neutral since 2007</span>
                         </a>
                     </div>
                     <div class="container-fluid pts col-lg-4 align-self-center order-3 text-end">
-                        <a class="p-2 bottom-bar" role="button" href="#Privacy">Privacy</a>
-                        <a class="p-2 bottom-bar" role="button" href="Terms">Terms</a>
+                        <a class="p-2 bottom-text" role="button" href="#Privacy">Privacy</a>
+                        <a class="p-2 bottom-text" role="button" href="Terms">Terms</a>
                         <div class="btn-group dropup p-2">
-                            <a type="button" class="dropdown-toggle caret-off bottom-bar" data-bs-toggle="dropdown">Settings</a>
+                            <a type="button" class="dropdown-toggle caret-off bottom-text" data-bs-toggle="dropdown">Settings</a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>
                                     <a class="dropdown-item" href="#Search-settings" role="menuitem">Search settings</a>
