Forgot to update settings dropup to stay on screen.

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                     <div class="container-fluid pts col-lg-4 align-self-center order-3 text-end">
                         <a class="p-2 bottom-text" role="button" href="#Privacy">Privacy</a>
                         <a class="p-2 bottom-text" role="button" href="Terms">Terms</a>
-                        <div class="btn-group dropup p-2">
+                        <div class="btn-group dropup p-2 dropstart">
                             <a type="button" class="dropdown-toggle caret-off bottom-text" data-bs-toggle="dropdown">Settings</a>
                             <ul class="dropdown-menu" role="menu">
                                 <li>
