Updated google logo so it shows on github.io

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 </nav>
             </div>
             <div class="row container-fluid logo align-items-end">
-                <img class="mx-auto d-block google-logo" src="/img/google-logo.png">
+                <img class="mx-auto d-block google-logo" src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
             </div>
             <div class="search-container container-fluid">
                 <form class="container-fluid" action="/search" role="search">
