--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                 <form class="container-fluid" action="/search" role="search">
                     <div class="container-fluid search-box">
                         <div class="container-fluid input-group mb-3 align-items-center border rounded-pill">
-                            <img class="search-icon" src="/img/1x/search-icon-sm.png">
+                            <img class="search-icon" src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/240/google/298/magnifying-glass-tilted-left_1f50d.png">
                             <input class="form-control" type="text">
                             <button class="btn" type="button" href="#" src="img/1x/mic-icon-sm.png"><img class="voice-icon" src="img/1x/mic-icon-sm.png"></button>
                         </div>
