Code clean-up for mic icon

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         <div class="container-fluid input-group mb-3 align-items-center border rounded-pill">
                             <img class="search-icon" src="img/2x/search-icon-lg.png">
                             <input class="form-control" type="text">
-                            <button class="btn" type="button" href="#" src="img/1x/mic-icon-sm.png"><img class="voice-icon" src="img/1x/mic-icon-sm.png"></button>
+                            <button class="btn" type="button" href="#"><img class="voice-icon" src="img/1x/mic-icon-sm.png"></button>
                         </div>
                     </div>
                     <div class="container-fluid">
